    interactive search for line numbers has been removed, use Ctrl-G instead.
    (Sergei Golubchik)

  * visualise now supports interactive changeset comment search.
    interactive search for revision numbers continues to work.
    (Sergei Golubchik)

  * Switch to gtk3. The old gtk2 branch is still available as lp:bzr-gtk/gtk2. (Curtis Hovey)

 BUG FIXES

  * Ensure config directory exists before writing configuration.
    (Jelmer Vernooij, #231150)

  * Mark as supporting bzr 2.5.0. (Jelmer Vernooij)

  * Add X-GNOME-Autostart-Delay=30 to bzr-notify.desktop.
    (Mikkel Kamstrup Erlandsen, #861201)

0.100.0	2011-03-02

 BUG FIXES

  * make sure that gdiff opened from gannotate knows its parent
    (gannotate, that is, and does not exit when it (gdiff) is closed.

  * Clarify 'visualise' help about the multiple branches feature
    and the --revision parameter. (Vincent Ladeuil, #556347)

  * Mark as compatible with bzr 2.3. (Jelmer Vernooij)

  * Fix appindicator icon category. (Michael Terry, #685634)

  * Mark as compatible with Bazaar 2.4. (Jelmer Vernooij)

  * "bzr viz" now shows authors instead of committers. (Jelmer Vernooij, #693949)

  * Don't use markup for secondary text in error dialogs.
    (Edward Ari Bichetero, #656641)

  * Generate pickles file when running 'setup.py sdist'. (Jelmer Vernooij, #397526)

 FEATURES
 
  * Add lock dialog. (Daniel Schierbeck, #93652)

 FEATURES

  * Add option to use "bzr viz" with a vertical layout.
    (Ximin Luo, #649273)

0.99.1	2010-08-26

 BUG FIXES

  * Trivial release to include credits pickle file.

   * Mark as compatible with Bazaar 2.3. (Vincent Ladeuil)

0.99.0 2010-08-13

 BUG FIXES

   * Guard setup() call when not loaded as __main__. (Robert Collins)

   * Ignore gnomekeyring.IOError when checking if credentials are available
     in the GNOME keyring. (Jelmer Vernooij, #534326)

   * Don't crash when there is already a lan-notify instance running.
     (Jelmer Vernooij, #339284)
